--- a/pymice-react/frontend/index.html
+++ b/pymice-react/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/mouse.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PyMiceTracking - Web Application</title>
   </head>
