--- a/pymice-react/frontend/index.html
+++ b/pymice-react/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/mouse.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PyMiceTracking - Web Application</title>
+    <title>PyMice Web - Behavioral Analysis Platform</title>
   </head>
   <body>
     <div id="root"></div>
